# Pulse_Stream

./: .env.production  .env.test  .gitignore  ALL_FIXES_COMPLETE.md  CLEANUP_REPORT.md  CODEBASE_CLEANUP_SUMMARY.md  COINBASE_BRIDGE_SUCCESS.md  COINBASE_QUICKSTART.md  DEPLOYMENT_NEXT_STEPS_COMPLETED.md  Dockerfile.coinbase-bridge  FIXES_COMPLETED_SUMMARY.md  FIX_PROGRESS.md  MISSION_ACCOMPLISHED.md  Project_details.txt  README.md  REALISTIC_DATA_TESTING_COMPLETE.md  REALISTIC_EVENT_DATA_GUIDE.md  REAL_WORLD_TEST_RESULTS.md  SESSION_SUMMARY_OCT_7_2025.md  coinbase_bridge.py  coinbase_bridge_requirements.txt  coinbase_dashboard.py  docker-compose.yml  env-example  env.example  main.py  pyproject.toml  sample_events_1k.jsonl  test_db_connection.py  test_events_500.jsonl  test_fix1.py  test_redis_connection.py  worker.py
alembic/: env.py  env_fixed.py
alembic/versions/: 001_initial_schema.py
apps/: __init__.py
apps/alerting/: __init__.py  api.py  notifications.py  services.py
apps/analytics/: __init__.py
apps/auth/: __init__.py  api.py  schemas.py  services.py
apps/dashboard/: __init__.py  api.py  services.py  websocket.py
apps/dashboard_v2/: __init__.py  api.py  schemas.py  services.py
apps/ingestion/: __init__.py  api.py  schemas.py  services.py
apps/processing/: __init__.py  tasks.py
apps/reporting/: __init__.py
apps/storage/: __init__.py  crud.py
apps/storage/models/: __init__.py  alert.py  event.py  tenant.py  user.py
core/: __init__.py  auth.py  config.py  constants.py  database.py  errors.py  logging.py  redis.py
docs/: coinbase-bridge-setup.md  environment-setup.md  phase-one-deployment-plan.md
infra/docker/: Dockerfile  init-db.sql
progress/: README.md  activity-log.md  alembic-failure-analysis.md  code-protection-plan.md  coinbase-integration-complete.md  current-status.md  database-implementation-summary.md  development-rules.md  october-2025-complete-deployment.md  progress-summary.md  requirements-analysis.md  rules-summary.md  step3-authentication-complete.md  step4-event-ingestion-complete.md
scripts/: __init__.py  generate_realistic_events.py  ingest_events_bulk.py  setup_env.py  test_alembic.py  test_alert_system.py  test_api_endpoints.py  test_auth_system.py  test_coinbase_bridge.py  test_core_protection.py  test_dashboard_system.py  test_dashboard_v2.py  test_db_models.py  test_event_ingestion.py  test_real_world_ingestion.py
